# little-projects

./: .clang-format  .gitignore  .vimrc  class point.py  fraction_class.py
ASCII/: .gitignore  encoder.py  out.txt  run.cpp  test.py
Config/: .vimrc  .zshrc  default_script.sh
Config/User/: C++.sublime-settings  Context.sublime-menu  Default (Linux).sublime-keymap  Default (Linux).sublime-mousemap  Default (OSX).sublime-keymap  FileHeader.sublime-settings  Package Control.sublime-settings  Preferences.sublime-settings  Python.sublime-settings  RainbowBrackets.sublime-settings  WakaTime.sublime-settings  caps.sublime-macro  comment_line.sublime-macro  delete_residue_backward.sublime-macro  delete_residue_forward.sublime-macro  goto_line.py  norm_toggle.py  shift-enter.sublime-macro
Diploma/: Makefile  kernel.cl  main.cpp  Диаграмма без названия.drawio
IBR/: tagIBR.c
IVS/IDZ/: IDZ.drawio  README.md  links.md
IVS/rtl/: SN74HC595_REG.v  W25Q16_FLASH.v  spi.v
IVS/tb/: tb_SPI.v
MK/: main.cpp
OSY/LAB-2/: st2.cpp  st2.hpp  string.cpp  string.hpp  t3.cpp
OSY/LAB-3/: .gitignore  Makefile
OSY/LAB-4/: CMakeLists.txt  Makefile  server.py
OSY/LAB-4/html/: a.html  index.html  lol.html  main.html
OSY/LAB-4/html/images/buttons/: button_facebook.psd
OSY/LAB-4/inc/: client.h  color.h  error.h  lab4.h  memory.h  server.h
OSY/LAB-4/src/: client.c  error.c  index.html  main.c  memory.c  server.c  utils.c
OSY/LAB-5/: programm.c
Painter/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  mainwindow.h  mainwindow.ui  mywidget.cpp  mywidget.h  object.cpp  object.h  qdynamicbutton.cpp  qdynamicbutton.h  soft_deleter.cpp  soft_deleter.h  square.cpp  square.h  triangle.cpp  triangle.h
Primes/: prime_drawning.py
Quizlet/: log  main.py  test.py
School-21/: microshell.c
School-21/exam-04/: microshell.c
School-21/exam-06/: miniserv.c
Snake Game/: divider.v
Sort/: BubbleSort.py  CocktailShakerSort.py  CombSort.py  GnomeSort.py  LSD_RadixSort.py  OddEvenSort.py  QuickSort.py  SelectionSort.py
StarSky/: .gitignore  Makefile  a.out  convert.py  out.pgm  sky.cpp  sky.pgm
TestAssignments/open-scaler/: answers.txt
TinFik/: KR-4.py  KR-5.py
Unik/AutomatonThreory/: .gitignore  DNF.cpp  DNF.hpp  (+6 more)
asm/: ctz.s
c/: archiver.c  poIBR.c  random.c  tagIBR.c
cpp/: SegTree.cpp  lexical_cast.hpp
n-body/: .gitignore  Makefile  compile_commands.json  fast.cpp  main.cpp  nbody  slow.cpp  test.cpp
open-scaler/: answers.txt  checker  file.txt  numbers.txt
py/: FixedPoint.py  aiohttp.py  aiohttp2.py  ip-mask.py
(+250 files in other folders)
